k8s/kustomize-cluster-apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      securityContext:
        runAsUser: 911
        runAsGroup: 911
        fsGroup: 911
      containers:
        - name: app
          image: app:latest
          imagePullPolicy: Always
          ports: []
          volumeMounts:
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
